Reparacion del bug en exámenes

--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -16,6 +16,8 @@
         <%= answer.input :_destroy, :as => :boolean %>
       </ol>
     </fieldset>
-  <% end %>
+    <%# debug answer.object  %>
+
+<% end %>
   <%= link_to t('.add_answer'), '#', :class => 'btn small add_record', :style => 'display:none' %>
 </fieldset>
