--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -87,11 +87,9 @@
               	   <% total_deliveries= 0%>
               	   <% total_survey= 0%>
               	  <%user.deliveries.each do |delivery|%>	   
-                  <% if delivery.raiting == nil %>
-                   0%
-                  <%else%>
-              	    <% total_deliveries=total_deliveries + (delivery.score ? delivery.score : 0) if delivery.raiting? %>
-                  <%end%>
+
+              	    <% total_deliveries=total_deliveries + (delivery.score ? delivery.score : 0) if (delivery.raiting < 0 && delivery.raiting != nil)%>
+
               	  <%end%>
               	   <%user.survey_replies.each do |survey|%>
 
@@ -101,7 +99,7 @@
               	  <%end%>
               	   <%(total_deliveries=total_deliveries/user.deliveries.count) if user.deliveries.count > 0%>
 
-              	   <%(total_survey=total_survey/user.survey_replies.count) if user.survey_replies.count > 0%>
+              	    <%(total_survey=total_survey/user.survey_replies.count) if user.survey_replies.count > 0%>
 
               	</tr>
 
@@ -109,7 +107,7 @@
                    <tbody>
 
               	<tr class="asset">	<td><p>
-              	<%if user.role == "student" %><%= image_tag(user.avatar_file.xsmall.url) %> <%= t('courses.assignments.assignments') %> : <b><%=total_deliveries%>%</b> + <%= t('surveys.index.header')%>: <b> <%= total_survey%>%</b> = Calificación tentativa <b><%= (total_survey+total_deliveries)/2%>%
+              	<%if user.role == "student" %><%= image_tag(user.avatar_file.xsmall.url) %> Calificación tentativa <b><%= (total_survey+total_deliveries)/2%>%
                    	<%else%>
               		 <%= user.name %> = <%= 'Evaluador o administrador del grupo'%> 
               		 <%end%>
