--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -110,7 +110,7 @@
                    <tbody>
 
               	<tr class="asset">	<td><p>
-              	<%if user.role == "student" %><%= image_tag(user.avatar_file.xsmall.url) %> "Calificación tentativa" <b><%= (total_survey+total_deliveries)/2%>%
+              	<%if user.role == "student" %><%= image_tag(user.avatar_file.xsmall.url) %> "Calificación tentativa" <b><%= (total_survey+total_deliveries)/2%><%= debug total_survey %>%<%= debug total_deliveries%>
                    	<%else%>
               		 <%= user.name %> = <%= 'Evaluador o administrador del grupo'%> 
               		 <%end%>
