--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -100,6 +100,7 @@
               	    <% total_survey=total_survey+survey.score %>
 
               	  <%end%>
+
               	   <%(total_deliveries=total_deliveries/user.deliveries.count) if user.deliveries.count > 0%>
 
               	    <%(total_survey=total_survey/user.survey_replies.count) if user.survey_replies.count > 0%>
@@ -110,7 +111,7 @@
                    <tbody>
 
               	<tr class="asset">	<td><p>
-              	<%if user.role == "student" %><%= image_tag(user.avatar_file.xsmall.url) %> "Calificación tentativa" <b><%= (total_survey+total_deliveries)/2%>%
+              	<%if user.role == "student" %><%= image_tag(user.avatar_file.xsmall.url) %> "Calificación tentativa" <b><%= ((total_survey+total_deliveries)/2)-100%>%
                    	<%else%>
               		 <%= user.name %> = <%= 'Evaluador o administrador del grupo'%> 
               		 <%end%>
