--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -8,7 +8,7 @@
        
        <center>
         <%= tabs_tag :open_tabs => { :class => "nav" } do |tab| %>
-         <%= tab.principal_wall t('dashboard.start'), root_path %> 
+         <%= tab.principal_wall t('dashboard.start'), principal_wall_path %> 
          <%= tab.dashboard t('dashboard.panel'), dashboard_path %>
          <%= tab.courses t('dashboard.campanas'), courses_path%>
          <%= tab.wall t('dashboard.profile'), wall_for_user_path(current_user) %>    
