--- a/app/views/shared/_assets_fields_for_comment.html.erb
+++ b/app/views/shared/_assets_fields_for_comment.html.erb
@@ -13,12 +13,14 @@
       <ol>
         <%= asset.input :name, :input_html => {:class => "span4"} %>
         <%= asset.input :description, :input_html => {:class => "span4"} %>
+        eeee
         <%= asset.input :file, :as => :file, :input_html => {'data-upload-path' => upload_asset_path} %>
         <%# asset.input :file_cache, :as => :hidden %>
         <%= asset.input :_destroy, :as => :boolean %>
       </ol>
     </fieldset>
   <% end %>
+
   <%= link_to t('courses.add_asset'), '#', :class => 'btn small info add_record left', :style => 'display:none' %>
   <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :input, :class => "btn right"}, :wrapper_html => {:class=>"right"} %>
 </fieldset>
