--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -16,6 +16,9 @@
             <div class="tab-pane active" id="res">
                 	<h3><%= t('courses.assignments.assignments') %> entregadas por el alumno</h3>
                     <table class= "zebra-striped">
+                        <%= @course.surveys.count %>
+                        <%= @course.users.count %>
+
                         <% @molto_course.each do |molto|%>
                         <thead>
                             <tr>
@@ -92,8 +95,19 @@
                         <table class= "zebra-striped">
                             <thead>
               	                <tr>
+                                    id del curso: <%# debug @molto_course %> _
+                                    
+                                    <%# @course.users[0].name %>
+
+                                    <%= debug @bella_survey %>
+
                                     <% @course.users.each do |user|%>
-              	                    <% if user.view_status == "fantom"%>
+
+                                    <%# if user.user.survey_replies[0] != nil && user.deliveries[0].id==@molto_course[0].deliveries[0].id %>
+                                        <%# debug user.deliveries[0].id  %>
+                                    <%# end %>
+                                    <%= debug user.survey_replies %>
+                                    <% if user.view_status == "fantom"%>
               	                    <%else%>
               	  	                    <th class="blue">
                                             <%if user.role == "student" %>
@@ -102,50 +116,53 @@
                                                 <%= 'Rol sin evaluación'%>
                                             <%end%>
                                         </th>
-              	                        <%user.deliveries.each do |delivery|%>
-                                        <!--contador de cuantas tareas y cuantas entregas de cuestionario hay en el curso-->
-                                            <% @count_ass = @course.assignments.count if @course.assignments.count > 0  %>
-                                            <% @count_sur = @course.surveys.count if  @course.surveys.count > 0 %>
+                                            <% if user.deliveries[0] != nil && user.deliveries[0].id==@molto_course[0].deliveries[0].id %>
+                                                <%user.deliveries.each do |delivery|%>
+                                                <!--contador de cuantas tareas y cuantas entregas de cuestionario hay en el curso-->
+                                                    <% @count_ass = @course.assignments.count if @course.assignments.count > 0  %>
+                                                    <% @count_sur = @course.surveys.count if  @course.surveys.count > 0 %>
 
-                                            <% if delivery.raiting == nil %>
-                                                tarea:<%= @global_deliveries += 0  %>
-                                                <% @global_deliveries += 0  %>
-                                            <%else%>
-                                                tarea:<%= @global_deliveries += delivery.score > 0 ? delivery.score : 0 %>
-                                                <% @global_deliveries += delivery.score > 0 ? delivery.score : 0  %>
-                                            <%end%>
+                                                    <% if delivery.raiting == nil %>
+                                                        <% @global_deliveries += 0  %>
+                                                    <%else%>
+                                                        <% @global_deliveries += delivery.score > 0 ? delivery.score : 0  %>
+                                                    <%end%>
 
-              	                        <%end%>
-                                        Total Tareas: <%= @global_deliveries/@course.assignments.count %>%
-                                        <%user.survey_replies.each do |survey|%>
-                                            <% if survey.score == nil %>
-                                                <% @global_survey += 0 %>
-                                            <% else %>
-                                                <% @global_survey += survey.score %>
+                                                <%end%>
+                                                Total Tareas: <%= @global_deliveries/@course.assignments.count %>%
                                             <% end %>
-                                        <%end%>
-                                        Total Examenes: <%= @global_survey/@course.surveys.count %>%
-                                        Calificacion final <%= @global_deliveries+@global_survey %>
-                   
-                                        <% @global_deliveries=0
+
+                                            <%user.survey_replies.each do |survey|%>
+                                                <% if survey.score == nil %>
+                                                    <% @global_survey += 0 %>
+                                                <% else %>
+                                                    <% @global_survey += survey.score %>
+                                                <% end %>
+                                            <%end%>
+                                            Total Examenes: <%= @global_survey/@course.surveys.count %>%
+                                            Calificacion final <%= @global_deliveries+@global_survey %>
+
+
+
+                                        <% #Reset global vars
+                                           @global_deliveries=0
                                            @global_survey=0 %>
-                   <% if @count_ass == nil %>
-                   <% @operation_deliveries= 0 %>
 
-                   <%else%>
-                   <%# @operation_deliveries= @total_deliveries/@count_ass %>
+                                        <% if @count_ass == nil %>
+                                            <% @operation_deliveries= 0 %>
 
-                   <%end%>
+                                        <%else%>
+                                            <%# @operation_deliveries= @total_deliveries/@count_ass %>
+                                        <%end%>
 
 
-                   <%= debug @total_survey %>
-                   <% if @count_sur == nil %>
-                       <% @operation_survey= 0 %>
-                   <%else%>
-                       <%# @operation_survey= @total_survey/@count_sur if @total_survey > 0 %>
-                   <%end%>
-
-              	</tr>
+                                        <%# debug @total_survey %>
+                                        <% if @count_sur == nil %>
+                                           <% @operation_survey= 0 %>
+                                        <%else%>
+                                           <%# @operation_survey= @total_survey/@count_sur if @total_survey > 0 %>
+                                        <%end%>
+              	                        </tr>
               	   <% validator_final_operation = 0%>   
                    <% validator_final_operation = @operation_deliveries + @operation_survey %>
                     <%# debug @total_deliveries%>
