--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -95,18 +95,21 @@
                         <table class= "zebra-striped">
                             <thead>
               	                <tr>
-                                    id del curso: <%# debug @molto_course %> _
+                                    <%# debug @molto_course %> _
                                     
                                     <%# @course.users[0].name %>
 
-                                    <%= debug @bella_survey %>
+                                    <%# debug @bella_survey %>
 
                                     <% @course.users.each do |user|%>
 
                                     <%# if user.user.survey_replies[0] != nil && user.deliveries[0].id==@molto_course[0].deliveries[0].id %>
-                                        <%# debug user.deliveries[0].id  %>
+                                        <%= debug user.deliveries[0]  %>
+                                        <%= debug user.deliveries[1]  %>
                                     <%# end %>
-                                    <%= debug user.survey_replies %>
+
+
+                                    <%# debug user.survey_replies %>
                                     <% if user.view_status == "fantom"%>
               	                    <%else%>
               	  	                    <th class="blue">
@@ -174,7 +177,7 @@
 
               	<tr class="asset">	<td><p>
               	<%if user.role == "student" %><%= image_tag(user.avatar_file.xsmall.url) %> "Calificación tentativa" <b><%= (validator_final_operation)/2 %>
-              	    <%= debug @total_deliveries%>+<%= debug @operation_survey%>
+              	    <%# debug @total_deliveries%>+<%# debug @operation_survey%>
                    	<%else%>
               		 <%= user.name %> = <%= 'Evaluador o administrador del grupo'%> 
               		 <%end%>
